--- a/index.html
+++ b/index.html
@@ -24,7 +24,37 @@
                 <img src="assets\images\icone_carrinho.svg" alt="Carrinho de Compras" />
             </button>
     </header>
-    <main></main>
+    <main>
+        <section>
+            <h2>Produtos</h2>
+            <ul>
+                <li>
+                    <figure>
+                        <img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro - Roxa">
+                        <figcaption>Camiseta Dev em Dobro - Roxa</figcaption>
+                    </figure>
+                    <div>
+                        <span>Cor: Roxa</span>
+                        <span>Tamanho: M</span>
+                        <span>Preço: R$ 89,00</span>
+                        <button>Adicionar ao Carrinho</button>
+                    </div>
+                </li>
+                                <li>
+                    <figure>
+                        <img src="./assets/images/caneca_devemdobro.jpg" alt="Caneca Dev em Dobro">
+                        <figcaption>Caneca Dev em Dobro</figcaption>
+                    </figure>
+                    <div>
+                        <span>Cor: Branca</span>
+                        <span>Tamanho: único</span>
+                        <span>Preço: R$ 89,00</span>
+                        <button>Adicionar ao Carrinho</button>
+                    </div>
+                </li>
+            </ul>
+        </section>
+    </main>
     <footer></footer>
 </body>
 
