--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Loja online de produtos Dev em Dobro. Compre camisetas, canecas e mais!">
     <title>E-commerce Master</title>
+    <link rel="icon" type="image/svg+xml" href="assets/images/logo.svg">
 </head>
 
 <body>
     <header>
         <a href="index.html">
-            <img src="assets\images\logo.svg" alt="Dev em Dobro" />
+            <img src="assets/images/logo.svg" alt="Logo Dev em Dobro" />
         </a>
         <nav>
             <ul>
@@ -20,9 +22,11 @@
                 <li><a href="#faq">Perguntas Frequentes</a></li>
                 <li><a href="#contato">Fale Conosco</a></li>
             </ul>
-            <button>
-                <img src="assets\images\icone_carrinho.svg" alt="Carrinho de Compras" />
+            <button aria-label="Abrir carrinho de compras">
+                <img src="assets/images/icone_carrinho.svg" alt="Carrinho de Compras" />
             </button>
+        </nav>
+    </header>
     </header>
     <main>
         <section>
@@ -40,7 +44,7 @@
                         <button>Adicionar ao Carrinho</button>
                     </div>
                 </li>
-                                <li>
+                <li>
                     <figure>
                         <img src="./assets/images/caneca_devemdobro.jpg" alt="Caneca Dev em Dobro">
                         <figcaption>Caneca Dev em Dobro</figcaption>
@@ -97,7 +101,7 @@
         <div tabindex="-1" data-micromodal-close>
 
             <!-- [3] -->
-            <div role="dialog" aria-modal="true" aria-labelledby="modal-1-title" >
+            <div role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
 
 
                 <header>
@@ -115,15 +119,16 @@
                                 <th>Descrição</th>
                                 <th>Preço</th>
                                 <th>Quantidade</th>
-                                <th>Total</th>      
+                                <th>Total</th>
                                 <th></th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td><img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro - Roxa"></td>
+                                <td><img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro - Roxa">
+                                </td>
                                 <td>Camiseta Dev em Dobro - Roxa</td>
-                                <td>R$ 89,00</td>   
+                                <td>R$ 89,00</td>
                                 <td><input type="number" value="1" min="1"></td>
                                 <td>R$ 89,00</td>
                                 <td><button id="deletar">Deletar</button></td>
@@ -131,25 +136,25 @@
                             <tr>
                                 <td><img src="./assets/images/caneca_devemdobro.jpg" alt="Caneca Dev em Dobro"></td>
                                 <td>Caneca Dev em Dobro</td>
-                                <td>R$ 89,00</td>   
+                                <td>R$ 89,00</td>
                                 <td><input type="number" value="1" min="1"></td>
                                 <td>R$ 89,00</td>
                                 <td><button id="deletar">Deletar</button></td>
-                            </tr>                       
+                            </tr>
                     </table>
                     <div>
                         <span id="total-carrinho">Total do Pedido: R$ 0,00</span>
                         <button>Finalizar Compra</button>
-                </div>
+                    </div>
 
+                </div>
             </div>
         </div>
-    </div>
-
-    
 
 
-    <script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
+
+
+        <script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
 </body>
 
 </html>
