--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Loja online de produtos Dev em Dobro. Compre camisetas, canecas e mais!">
     <title>E-commerce Master</title>
-    <link rel="icon" type="image/svg+xml" href="assets/images/logo.svg">
+    
+    <link rel="stylesheet" href="css/reset.css">
 </head>
 
 <body>
