--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"rel="stylesheet">
-
+    
 
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/base.css">
-        <link rel="stylesheet" href="css/cabecalho.css">
+    <link rel="stylesheet" href="css/cabecalho.css">
+    <link rel="stylesheet" href="css/produtos.css">
 
 </head>
 
@@ -54,7 +55,7 @@
     </header>
     </header>
     <main>
-        <section>
+        <section class="produtos">
             <h2>Produtos</h2>
             <ul>
                 <li>
@@ -62,7 +63,7 @@
                         <img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro - Roxa">
                         <figcaption>Camiseta Dev em Dobro - Roxa</figcaption>
                     </figure>
-                    <div>
+                    <div class="informacoes">
                         <span>Cor: Roxa</span>
                         <span>Tamanho: M</span>
                         <span>Preço: R$ 89,00</span>
@@ -74,7 +75,7 @@
                         <img src="./assets/images/caneca_devemdobro.jpg" alt="Caneca Dev em Dobro">
                         <figcaption>Caneca Dev em Dobro</figcaption>
                     </figure>
-                    <div>
+                    <div class="informacoes">
                         <span>Cor: Branca</span>
                         <span>Tamanho: único</span>
                         <span>Preço: R$ 89,00</span>
